fix wrong style with spinner on iphone

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,6 +57,16 @@ body {
   border: solid 1px white;
 }
 
+.loading-spinner-img {
+  width: unset!important;
+  height: unset!important;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
 hr {
   width: 90%;
 }
